OnboardingV2Minimal/force-app/main/default/objects/Training_Requirement__c/fields/External_Course_Code__c.field-meta.xml
<CustomField>
    <fullName>External_Course_Code__c</fullName>
    <externalId>true</externalId>
    <label>External Course Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>