OnboardingV2Minimal/force-app/main/default/objects/Training_Requirement__c/fields/External_Course_Name__c.field-meta.xml
<CustomField>
    <fullName>External_Course_Name__c</fullName>
    <label>External Course Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>