OnboardingV2Minimal/force-app/main/default/objects/Training_Requirement__c/fields/Required_Credential__c.field-meta.xml
<CustomField>
    <fullName>Required_Credential__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Required Credential</label>
    <referenceTo>Required_Credential__c</referenceTo>
    <relationshipLabel>Training Requirements</relationshipLabel>
    <relationshipName>Training_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>