OnboardingV2Minimal/force-app/main/default/objects/Training_Requirement__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Sequence</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>