OnboardingV2Minimal/force-app/main/default/objects/Training_Requirement__c/fields/Training_Code__c.field-meta.xml
<CustomField>
    <fullName>Training_Code__c</fullName>
    <inlineHelpText>For LearnUpon this is the Group Number. For other training systems from other vendors it could be something else.</inlineHelpText>
    <label>Internal Training Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>