OnboardingV2Minimal/force-app/main/default/objects/Training_Requirement__c/fields/Training_System__c.field-meta.xml
<CustomField>
    <fullName>Training_System__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training System</label>
    <referenceTo>Training_System__c</referenceTo>
    <relationshipName>Vendor_Training_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>