OnboardingV2Minimal/force-app/main/default/objects/Training_Requirement__c/fields/Training_Type__c.field-meta.xml
<CustomField>
    <fullName>Training_Type__c</fullName>
    <label>Training Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>