OnboardingV2Minimal/force-app/main/default/objects/Training_Requirement__c/validationRules/Required_Credential_Not_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Credential_Not_Allowed</fullName>
    <active>true</active>
    <description>This rule makes sure that required credentials are not saved for internal training requirement records.</description>
    <errorConditionFormula>AND(
ISPICKVAL(Training_Type__c, &quot;Internal&quot;),
NOT(ISBLANK(Required_Credential__c))
)</errorConditionFormula>
    <errorDisplayField>Required_Credential__c</errorDisplayField>
    <errorMessage>Internal Training Requirements cannot have a Required Credential.</errorMessage>
</ValidationRule>