OnboardingV2Minimal/force-app/main/default/objects/Training_Requirement__c/validationRules/Required_Credential_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Credential_Required</fullName>
    <active>true</active>
    <description>This rule makes sure that required credentials are saved for external training requirement records.</description>
    <errorConditionFormula>AND(
    NOT(ISPICKVAL(Training_Type__c, &quot;Internal&quot;)),
    ISBLANK(Required_Credential__c)
)</errorConditionFormula>
    <errorDisplayField>Required_Credential__c</errorDisplayField>
    <errorMessage>To save an external training record, you must have a required credential assigned to the record.</errorMessage>
</ValidationRule>