OnboardingV2Minimal/force-app/main/default/objects/Training_Requirement__c/validationRules/Training_System_System_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Training_System_System_Required</fullName>
    <active>true</active>
    <description>External Training must have a Training System</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Training_Type__c, &quot;External&quot;),
    ISBLANK(Training_System__c)
)</errorConditionFormula>
    <errorDisplayField>Training_System__c</errorDisplayField>
    <errorMessage>External Training Requirements must be linked to a Training System.</errorMessage>
</ValidationRule>