OnboardingV2Minimal/force-app/main/default/objects/Training_Requirement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Is_Required__c</columns>
    <columns>Sequence__c</columns>
    <columns>Training_Type__c</columns>
    <columns>Training_Code__c</columns>
    <columns>External_Course_Code__c</columns>
    <columns>External_Course_Name__c</columns>
    <columns>Training_System__c</columns>
    <columns>Vendor_Customization__c</columns>
    <columns>Required_Credential__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>